compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__echo_followed_by_invalid_message.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2892
expression: "echo 11 as { True || False }"
snapshot_kind: text
---
----- SOURCE CODE
echo 11 as { True || False }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:12
  │
1 │ echo 11 as { True || False }
  │            ^^^^^^^^^^^^^^^^^

Expected type:

    String

Found type:

    Bool
