compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__echo_followed_by_no_expression.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2877
expression: echo
snapshot_kind: text
---
----- SOURCE CODE
echo

----- ERROR
error: Invalid echo use
  ┌─ /src/one/two.gleam:1:1
  │
1 │ echo
  │ ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
