compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__echo_followed_by_no_expression_5.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2932
expression: "\npub fn main() {\n  panic as echo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  panic as echo
}


----- ERROR
error: Invalid echo use
  ┌─ /src/one/two.gleam:3:12
  │
3 │   panic as echo
  │            ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
